@@ -1,3 +1,7 @@
+2003-08-01  Peter Bienstman  <Peter.Bienstman@ugent.be>
+
+	* cavity.cpp: Improve checking for gain_material (again).
+
 2003-07-14  Peter Bienstman  <Peter.Bienstman@ugent.be>
 
 	* cavity.cpp: Improve checking for gain_material.
